# pure-backend

./: README.md  docker-compose.local.yml  docker-compose.yml
backend/: gunicorn.py  pyproject.toml
backend/api/: urls.py  views.py
backend/backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/backend/settings/: base.py  development.py  local.py
backend/base/: tests.py
backend/base/support_functions/: base.py  near_blockchain.py  requests.py  solana_blockchain.py
backend/users/: models.py
docker/: backend.Dockerfile  backend_scanners.Dockerfile  celery_beat.Dockerfile  celery_worker.Dockerfile
docker/nginx/: nginx.conf
docker/nginx/templates/ssl/: backend.conf.template
